--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "redux": "3.5.2",
     "redux-observable": "0.13.0",
     "redux-thunk": "2.1.0",
+    "rxjs": "5.2.0",
     "scroll-behavior": "0.8.1",
     "stripe": "4.15.0",
     "toastr": "2.1.2"
